Menu version iPhone fixed and pricing menu fixed

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -436,7 +436,6 @@ h3 { font-family: 'Oswald'; }
 }
 .img_mobile {
   background-image: url('/assets/mobile/bkg.jpg');
-  width: 100%;
   height: 80px;
   float: left;
   border: thick 1px solid;
